[package]
name = "gradient-from-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colors-transform = "0.2.11"
eframe = "0.27.2"
egui = "0.27.2"
egui_extras = { version = "0.27.2", features = ["all_loaders"] }
image = "0.25.1"
rfd = "0.14.1"
